Bug 271815 GTK2 IM over-the-spot doesn't work with Chinese IM because the editor doesn't return correct caret position r=timeless, sr=roc